fix min size of img

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
         <script type="text/javascript" src="https://cdn.rawgit.com/alvarotrigo/pagePiling.js/master/jquery.pagepiling.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
         <script src="js/zoomEffect.js"></script>
-        <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.10.2/validator.min.js"></script>
         <!-- <script src="js/validate.js"></script> -->
         <script src="js/core.js"></script>
 
@@ -458,9 +458,24 @@
             var img = document.getElementById("imgFeedbackBook");
             img.addEventListener("click", function zoomOnClick(){
                 if(isZoomed == false){
+                    var w = window.innerWidth;
+                    var h = window.innerHeight;
+
+                    if(w<768){
+
+                    }
                     var style = document.createElement('style');
                     style.type = 'text/css';
-                    style.innerHTML = '#imgFeedbackBook {transform: scale(1.5);}';
+                    if(w<768){
+                      style.innerHTML = '#imgFeedbackBook {transform: scale(2.7);}';
+                    }
+                    else if (w>1024){
+                      style.innerHTML = '#imgFeedbackBook {transform: scale(1.2);}';
+                    }
+                    else{
+                      style.innerHTML = '#imgFeedbackBook {transform: scale(1.5);}';
+                    }
+
                     document.getElementsByTagName('head')[0].appendChild(style);
                     isZoomed = true;
                   }
