--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                              </address>
                              <address>
                                <strong>Direct Mail Concat</strong><br>
-                               <a href="mailto:#">contact@anastasia-vasina-langues.com</a>
+                               <a href="mailto:#"><b>contact@anastasia-vasina-langues.com</b></a>
                              </address>
                          <h1>Me suivre</h1>
                          <ul class="list-inline ">
