Try to redirect after form POST

--- a/index.html
+++ b/index.html
@@ -310,9 +310,9 @@
                                        <label for="form_need">Veuillez préciser votre besoin *</label>
                                        <select id="form_need" name="need" class="form-control" required="required" data-error="Please specify your need.">
                                            <option value=""></option>
-                                           <option value="Request quotation">Enseignement</option>
-                                           <option value="Request order status">Traduction</option>
-                                           <option value="Other">Autre</option>
+                                           <option value="Enseignement">Enseignement</option>
+                                           <option value="Traduction">Traduction</option>
+                                           <option value="Autre">Autre</option>
                                        </select>
                                        <div class="help-block with-errors"></div>
                                    </div>
